Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/theresama/-filter">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/theresama/Filter">View on GitHub</a>
 
           <h1 id="project_title">#filter</h1>
           <h2 id="project_tagline">Facebook Chrome Extension - built at the 2014 Facebook Waterloo Hackathon</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/theresama/-filter/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/theresama/-filter/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/theresama/Filter/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/theresama/Filter/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -36,9 +36,18 @@
 
 <p>A reminder to think twice about what you post.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<h3>
+<a name="how-to-install" class="anchor" href="#how-to-install"><span class="octicon octicon-link"></span></a>How To Install:</h3>
+
+<pre><code>Download 
+Unzip
+Open up Google Chrome
+Go to chrome://extensions
+Check off "Developer Mode"
+Click "Load Unpacked Extension"
+Select the entire downloaded folder
+
+Ta-da, that's it! The extension should be enabled and running.
 </code></pre>
       </section>
     </div>
