--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h3>
 <a name="what-is-it" class="anchor" href="#what-is-it"><span class="octicon octicon-link"></span></a>What is it?</h3>
 
-<p>A reminder to think twice about what you post.</p>
+<p>A reminder to think twice about what you post. </p>
 
 <h3>
 <a name="how-to-install" class="anchor" href="#how-to-install"><span class="octicon octicon-link"></span></a>How To Install:</h3>
@@ -42,7 +42,7 @@
 <pre><code>Download 
 Unzip
 Open up Google Chrome
-Go to chrome://extensions
+Go to [chrome://extensions](chrome://extensions)
 Check off "Developer Mode"
 Click "Load Unpacked Extension"
 Select the entire downloaded folder
