--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="#filter : Facebook Chrome Extension - built at the 2014 Facebook Waterloo Hackathon" />
+    <meta name="description" content="#filter : Chrome Extension for the avid Facebook Commenter - built at the 2014 Facebook Waterloo Hackathon" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/theresama/Filter">View on GitHub</a>
 
           <h1 id="project_title">#filter</h1>
-          <h2 id="project_tagline">Facebook Chrome Extension - built at the 2014 Facebook Waterloo Hackathon</h2>
+          <h2 id="project_tagline">Chrome Extension for the avid Facebook Commenter - built at the 2014 Facebook Waterloo Hackathon</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/theresama/Filter/zipball/master">Download this project as a .zip file</a>
@@ -31,10 +31,15 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a name="what-is-it" class="anchor" href="#what-is-it"><span class="octicon octicon-link"></span></a>What is it?</h3>
+        <h1>
+<a name="what-is-it" class="anchor" href="#what-is-it"><span class="octicon octicon-link"></span></a>What is it?</h1>
 
-<p>A reminder to think twice about what you post. </p>
+<h3>
+<a name="a-reminder-to-think-twice-about-what-you-post" class="anchor" href="#a-reminder-to-think-twice-about-what-you-post"><span class="octicon octicon-link"></span></a>A reminder to think twice about what you post.</h3>
+
+<p>Cyberbullying is by far one of the most prominent forms of bullying - something we can't avoid especially if we're consistently on the internet. Now, we're not saying that you're being a menace just by being on the internet, but sometimes it's hard to avoid less-than-stellar language.</p>
+
+<p>With #filter, there's no need to second guess yourself because this extension will do it for you. When you install it, #filter will recognize the language you're attempting to use and ask if that's really what you want to do before you post.</p>
 
 <h3>
 <a name="how-to-install" class="anchor" href="#how-to-install"><span class="octicon octicon-link"></span></a>How To Install:</h3>
@@ -46,9 +51,9 @@ Go to [chrome://extensions](chrome://extensions)
 Check off "Developer Mode"
 Click "Load Unpacked Extension"
 Select the entire downloaded folder
-
-Ta-da, that's it! The extension should be enabled and running.
 </code></pre>
+
+<p>Ta-da, that's it! The extension should be enabled and running.</p>
       </section>
     </div>
 
