Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Click "Load Unpacked Extension"
 Select the entire downloaded folder
 </code></pre>
 
-<p>Ta-da, that's it! The extension should be enabled and running.</p>
+<p>Ta-da, that's it! The extension should be enabled and running :)</p>
       </section>
     </div>
 
